# deep_learning_course

./: README.md  main.py  pyproject.toml
course_1/: week2.ipynb  week3.ipynb  week4.ipynb
course_1/assignment_week2/: C1W2_Assignment_2.ipynb
course_1/assignment_week3/: C1W3_Assignment.ipynb
course_1/assignment_week4a/: C1W4_Assignment_1.ipynb
course_1/assignment_week4b/: C1W4_Assignment_2.ipynb
